# pyplc

./: .gitignore  Makefile  README.md  __init__.py  core.mpy  coupler-krax.conf  io.csv  krax.conf  krax.json  modules.py  netvar.py  persist.json  prg.py  pyproject.toml  server.py  short-io.csv  telnet.py  utils.py
debian/: README.md  changelog  control  copyright  files  rules
debian/source/: options
docs/: conf.py  index.rst  pyplc.about.rst  pyplc.api.rst  pyplc.channel.rst  pyplc.core.rst  pyplc.examples.rst  pyplc.usage.rst
src/: Makefile  boot.py  io.csv  krax.conf  krax.json  kx_bonjour.py  kx_setup.py  layout.csv
src/krax/: __init__.py
src/krax.stubs/: __init__.py
src/kx/: at25640b.py  config.py  coupler.py  krax932.py  misc.py  setup.py  upydev_.config
src/pyplc/: __init__.py  __main__.py  __version__.py  _version.py  channel.py  config.py  consts.py  core.py  coupler.py  ld.py  modules.py  platform.py  platform_esp32.py  platform_linux.py  pou.py  sfc.py  stl.py
src/pyplc/resources/: board.py  krax.csv  krax.json  krax.py
src/pyplc/utils/: __init__.py  bindable.py  buffer.py  cli.py  context.py  latch.py  misc.py  nvd.py  posto.py  subscriber.py  tcpclient.py  tcpserver.py  trig.py
tests/: boot.py  generic.py  krax.conf  performance.py  test_bindable.py  test_blink.py  test_cli.py  test_config.py  test_core.py  test_coupler.py  test_krax.py  test_ld#1.py  test_ld.py  test_performance.py  test_performance_client.py  test_performance_server.py  test_persistance.py  test_posto.py  test_posto_subscriber.py  test_pou.py  test_rtrig.py  test_sfc.py  test_sr.py  test_stl.py  test_stopwatch.py  test_subscriber.py  test_tcpclient.py  test_tcpserver.py  test_tof.py  test_ton.py  test_tp.py  test_trans.py  test_trig.py
