[build-system]
requires = ["setuptools>=61.0","wheel","git-versioner>=6.0"]
build-backend = "setuptools.build_meta"

[tool.git-versioner]
snapshot = true
short = true
desc = true
use_git_versioner="short,desc,snapshot"

[project]
dynamic = ["version"]
name = "pyplc"
authors = [
  { name="Linnik V.V.", email="vlinnik@mail.ru" },
]
description = "Framework for developing IEC-like programs on python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vlinnik/pyplc"
"Bug Tracker" = "https://github.com/vlinnik/pyplc/issues"
